[gd_scene load_steps=10 format=3 uid="uid://bw04bwuopdtai"]

[ext_resource type="Script" uid="uid://d0ww83e0cjjbr" path="res://game_ui_manager.gd" id="1_3fmbn"]
[ext_resource type="Script" uid="uid://bi8itfklc4565" path="res://game_board.gd" id="1_u5pr3"]
[ext_resource type="Script" uid="uid://cncj4wlwykl0h" path="res://top_bar_panel.gd" id="2_3fmbn"]
[ext_resource type="Script" uid="uid://ddhocvt6e08ll" path="res://board_canvas.gd" id="2_ocn0r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocn0r"]
bg_color = Color(0.737255, 0.556863, 0.443137, 0.752941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fmbn"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.18, 0.18, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.25, 0.25, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1wqh"]
bg_color = Color(0.12, 0.16, 0.16, 1)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.25, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trxdi"]
bg_color = Color(0.2, 0.18, 0.14, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.28, 0.24, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xh2g"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.929412, 0.878431, 0.784314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 999
corner_radius_top_right = 999
corner_radius_bottom_right = 999
corner_radius_bottom_left = 999

[node name="MainScene" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameUIManager" type="Node" parent="."]
script = ExtResource("1_3fmbn")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ocn0r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GameBoard" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14
alignment = 1
script = ExtResource("1_u5pr3")
metadata/_edit_use_anchors_ = true

[node name="TopBarPanel" type="Panel" parent="MarginContainer/GameBoard"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3fmbn")
script = ExtResource("2_3fmbn")

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/GameBoard/TopBarPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="FrontSpacer" type="Control" parent="MarginContainer/GameBoard/TopBarPanel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.6

[node name="ScorePrefix" type="Label" parent="MarginContainer/GameBoard/TopBarPanel/TopBar"]
layout_mode = 2
text = "Score: "

[node name="ScoreValue" type="Label" parent="MarginContainer/GameBoard/TopBarPanel/TopBar"]
layout_mode = 2
size_flags_stretch_ratio = 27.4

[node name="MidSpacer" type="Control" parent="MarginContainer/GameBoard/TopBarPanel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.6

[node name="Menu" type="Button" parent="MarginContainer/GameBoard/TopBarPanel/TopBar"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
size_flags_horizontal = 0
text = "☰"

[node name="BackSpacer" type="Control" parent="MarginContainer/GameBoard/TopBarPanel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.6

[node name="GameOverBox" type="VBoxContainer" parent="MarginContainer/GameBoard/TopBarPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -27.0
offset_right = 31.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/GameBoard/TopBarPanel/GameOverBox"]
layout_mode = 2

[node name="Scores" type="HBoxContainer" parent="MarginContainer/GameBoard/TopBarPanel/GameOverBox"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/GameBoard/TopBarPanel/GameOverBox/Scores"]
layout_mode = 2

[node name="MovesLabel" type="Label" parent="MarginContainer/GameBoard/TopBarPanel/GameOverBox/Scores"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/GameBoard/TopBarPanel/GameOverBox"]
layout_mode = 2

[node name="BoardPanel" type="Panel" parent="MarginContainer/GameBoard"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p1wqh")

[node name="BoardContainer" type="CenterContainer" parent="MarginContainer/GameBoard/BoardPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="BoardCanvas" type="Control" parent="MarginContainer/GameBoard/BoardPanel/BoardContainer"]
layout_mode = 2
script = ExtResource("2_ocn0r")

[node name="QueuePanel" type="Panel" parent="MarginContainer/GameBoard"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_trxdi")

[node name="QueueBar" type="HBoxContainer" parent="MarginContainer/GameBoard/QueuePanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="OnDeckTilesBackground" type="Panel" parent="MarginContainer/GameBoard/QueuePanel/QueueBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="QueueTiles" type="HBoxContainer" parent="MarginContainer/GameBoard/QueuePanel/QueueBar/OnDeckTilesBackground"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30
alignment = 1

[node name="ArrowLabel" type="Label" parent="MarginContainer/GameBoard/QueuePanel/QueueBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "→"

[node name="NextTileBackground" type="Panel" parent="MarginContainer/GameBoard/QueuePanel/QueueBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6xh2g")

[connection signal="game_over" from="MarginContainer/GameBoard/BoardPanel/BoardContainer/BoardCanvas" to="GameUIManager" method="_on_board_canvas_game_over"]
